# Python-QtTracker

./: CMakeLists.txt  COPYRIGHT
QtTracker/: CMakeLists.txt  global.h  pyside_global.h  qttracker_rdf.h  typesystem_qttracker.xml
cmake/Macros/: BindingMacros.cmake  FindPythonInterpWithDebug.cmake  FindQtTracker.cmake  licensecomment.txt
examples/: examples.pro
examples/contacts/: contacts.cpp  contacts.h  contacts.pro  contacts.py
examples/email/: email.cpp  email.h  email.pro
examples/queries/: queries.cpp  queries.h  queries.pro
