project(QtTracker)

if(NOT QTTRACKER_FOUND)
    find_package(QtTracker REQUIRED)
endif()

set(QtTracker_SRC
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/qttracker_module_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_backends_tracker_classupdatesignaler_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_cpptype_wrapper.cpp
#Template ${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_iriclassbase_wrapper.cpp
#Template ${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_listpolicy_column_wrapper.cpp
#Template ${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_listpolicy_columndynamic_wrapper.cpp
#Template ${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_live_policy_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_live_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_livebag_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_livebagpolicy_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_livenode_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_livenodemodel_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_liveresource_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_liveresourcebridgefacade_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_liveresourcebridgemixin_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_nodecreatorfunctorpolicy_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_nodelistpolicy_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_omnitypelivenode_wrapper.cpp
#Deprecated ${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_qdebughelper_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdffilter_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfgraph_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfpattern_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfpropertydata_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfquery_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfselect_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfselectcolumn_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfservice_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfstrategy_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfsubselect_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdftransaction_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfupdate_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfvariable_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfvariablelink_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_rdfvariablestatement_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_strictlive_policy_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_strictlive_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_valueofliveentity_policy_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_valueofliveentity_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_valueofliveresource_policy_wrapper.cpp
#${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_valueofliveresource_wrapper.cpp
${CMAKE_CURRENT_BINARY_DIR}/QtTracker/sopranolive_valueofomnitypeliveresource_policy_wrapper.cpp
#sopranolive_ontologies_nco_affiliation_wrapper.cpp
#sopranolive_ontologies_nco_affiliation_wrapper.h
#sopranolive_ontologies_nco_authorizationstatus_wrapper.cpp
#sopranolive_ontologies_nco_authorizationstatus_wrapper.h
#sopranolive_ontologies_nco_bbsnumber_wrapper.cpp
#sopranolive_ontologies_nco_bbsnumber_wrapper.h
#sopranolive_ontologies_nco_carphonenumber_wrapper.cpp
#sopranolive_ontologies_nco_carphonenumber_wrapper.h
#sopranolive_ontologies_nco_cellphonenumber_wrapper.cpp
#sopranolive_ontologies_nco_cellphonenumber_wrapper.h
#sopranolive_ontologies_nco_contact_wrapper.cpp
#sopranolive_ontologies_nco_contact_wrapper.h
#sopranolive_ontologies_nco_contactgroup_wrapper.cpp
#sopranolive_ontologies_nco_contactgroup_wrapper.h
#sopranolive_ontologies_nco_contactlist_wrapper.cpp
#sopranolive_ontologies_nco_contactlist_wrapper.h
#sopranolive_ontologies_nco_contactlistdataobject_wrapper.cpp
#sopranolive_ontologies_nco_contactlistdataobject_wrapper.h
#sopranolive_ontologies_nco_contactmedium_wrapper.cpp
#sopranolive_ontologies_nco_contactmedium_wrapper.h
#sopranolive_ontologies_nco_domesticdeliveryaddress_wrapper.cpp
#sopranolive_ontologies_nco_domesticdeliveryaddress_wrapper.h
#sopranolive_ontologies_nco_emailaddress_wrapper.cpp
#sopranolive_ontologies_nco_emailaddress_wrapper.h
#sopranolive_ontologies_nco_faxnumber_wrapper.cpp
#sopranolive_ontologies_nco_faxnumber_wrapper.h
#sopranolive_ontologies_nco_gender_wrapper.cpp
#sopranolive_ontologies_nco_gender_wrapper.h
#sopranolive_ontologies_nco_imaccount_wrapper.cpp
#sopranolive_ontologies_nco_imaccount_wrapper.h
#sopranolive_ontologies_nco_imaddress_wrapper.cpp
#sopranolive_ontologies_nco_imaddress_wrapper.h
#sopranolive_ontologies_nco_imcapability_wrapper.cpp
#sopranolive_ontologies_nco_imcapability_wrapper.h
#sopranolive_ontologies_nco_imcontact_wrapper.cpp
#sopranolive_ontologies_nco_imcontact_wrapper.h
#sopranolive_ontologies_nco_internationaldeliveryaddress_wrapper.cpp
#sopranolive_ontologies_nco_internationaldeliveryaddress_wrapper.h
#sopranolive_ontologies_nco_isdnnumber_wrapper.cpp
#sopranolive_ontologies_nco_isdnnumber_wrapper.h
#sopranolive_ontologies_nco_messagingnumber_wrapper.cpp
#sopranolive_ontologies_nco_messagingnumber_wrapper.h
#sopranolive_ontologies_nco_metacontact_wrapper.cpp
#sopranolive_ontologies_nco_metacontact_wrapper.h
#sopranolive_ontologies_nco_modemnumber_wrapper.cpp
#sopranolive_ontologies_nco_modemnumber_wrapper.h
#sopranolive_ontologies_nco_organizationcontact_wrapper.cpp
#sopranolive_ontologies_nco_organizationcontact_wrapper.h
#sopranolive_ontologies_nco_pagernumber_wrapper.cpp
#sopranolive_ontologies_nco_pagernumber_wrapper.h
#sopranolive_ontologies_nco_parceldeliveryaddress_wrapper.cpp
#sopranolive_ontologies_nco_parceldeliveryaddress_wrapper.h
#sopranolive_ontologies_nco_pcsnumber_wrapper.cpp
#sopranolive_ontologies_nco_pcsnumber_wrapper.h
#sopranolive_ontologies_nco_personcontact_wrapper.cpp
#sopranolive_ontologies_nco_personcontact_wrapper.h
#sopranolive_ontologies_nco_phonenumber_wrapper.cpp
#sopranolive_ontologies_nco_phonenumber_wrapper.h
#sopranolive_ontologies_nco_postaladdress_wrapper.cpp
#sopranolive_ontologies_nco_postaladdress_wrapper.h
#sopranolive_ontologies_nco_presencestatus_wrapper.cpp
#sopranolive_ontologies_nco_presencestatus_wrapper.h
#sopranolive_ontologies_nco_role_wrapper.cpp
#sopranolive_ontologies_nco_role_wrapper.h
#sopranolive_ontologies_nco_videotelephonenumber_wrapper.cpp
#sopranolive_ontologies_nco_videotelephonenumber_wrapper.h
#sopranolive_ontologies_nco_voicephonenumber_wrapper.cpp
#sopranolive_ontologies_nco_voicephonenumber_wrapper.h
#sopranolive_ontologies_nco_wrapper.cpp
#sopranolive_ontologies_nco_wrapper.h

)

set(QtTracker_INCLUDE_DIRECTORIES
${CMAKE_CURRENT_BINARY_DIR}/${BINDING_NAME}
${SHIBOKEN_INCLUDE_DIR}
${PYTHON_INCLUDE_PATH}
${PYSIDE_INCLUDE_DIR}
${PYSIDE_INCLUDE_DIR}/QtCore
${QT_INCLUDE_DIR}
${QT_QTCORE_INCLUDE_DIR}
${QTTRACKER_INCLUDE_DIR}
${QTTRACKER_INCLUDE_DIR}/ontologies
)

set(QtTracker_LINK_LIBRARIES
${PYTHON_LIBRARIES}
${SHIBOKEN_LIBRARY}
${PYSIDE_LIBRARY}
${QT_QTCORE_LIBRARY}
${QTTRACKER_LIBRARY}
)

CREATE_BINDING_MODULE(QtTracker
                      ${QTTRACKER_INCLUDE_DIR}
                      QtTracker_SRC
                      QtTracker_INCLUDE_DIRECTORIES
                      QtTracker_LINK_LIBRARIES)


